fix: vertical align fix on github

--- a/src/assets/styles/partials/_mb_theme.scss
+++ b/src/assets/styles/partials/_mb_theme.scss
@@ -61,13 +61,13 @@ div {
 
   &:hover {
     color: $mb-color-white;
-    background-color: $mb-color-primary-hover;
+    background-color: $mb-color-primary-dark;
     border: $mb-border-thin solid $mb-color-primary;
   }
 
   &:active {
     color: $mb-color-white;
-    background-color: $mb-color-primary-active;
+    background-color: $mb-color-primary-light;
     border: $mb-border-thin solid $mb-color-primary;
   }
 }
@@ -335,10 +335,12 @@ input {
     border: none;
     width: 2rem;
     height: 2rem;
+
     &::-webkit-color-swatch-wrapper {
       padding: 0;
       @include mb-border-radius(s);
     }
+
     ::-webkit-color-swatch {
       border: none;
       @include mb-border-radius(s);
@@ -418,7 +420,7 @@ input {
     }
 
     &:focus::-webkit-slider-runnable-track {
-      background-color: $mb-color-primary-hover;
+      background-color: $mb-color-primary-dark;
     }
   }
 
@@ -430,7 +432,9 @@ input {
       content: "\2714";
       border: $mb-border-thin solid $mb-color-border-medium;
       @include mb-border-radius(s);
-      display: inline-block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       width: 1rem;
       height: 1rem;
       padding-left: $mb-space-xxs;
@@ -570,6 +574,7 @@ input {
     &:disabled:checked {
       &+label {
         color: rgba($mb-color-gray, $mb-opacity-l);
+
         &::before {
           background-color: rgba($mb-color-gray, $mb-opacity-l);
           color: $mb-color-white;
@@ -602,11 +607,12 @@ input {
       }
     }
   }
+
   &[type="date"],
   &[type="datetime-local"],
   &[type="month"],
   &[type="week"] {
-    &::-webkit-calendar-picker-indicator{
+    &::-webkit-calendar-picker-indicator {
       content: url('../icons/icon-calendar.svg');
       position: relative;
       height: 1rem;
